放假了更新点东西
1. 更新到Java21
2. 使用maven + launch4j 插件打包exe包
3. 删除BParser.java中的冗余代码
4. 重构大量代码，api使用更加现代的请求方法